// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a bus component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <div
          className="m-schedule-direction__route-pattern"
          onClick={[Function]}
          onKeyUp={[Function]}
        >
          Pattern 2
           
        </div>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "line diagram content goes here",
      }
    }
  />
</ScheduleDirection>
`;

exports[`it renders a subway component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <div
          className="m-schedule-direction__route-pattern"
        >
          End
        </div>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "line diagram content goes here",
      }
    }
  />
</ScheduleDirection>
`;
